# src/app/services/models/job-post-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface JobPostResponse {
+  dateLine?: string;
+  description?: string;
+  id?: number;
+  requirementsANDskills?: string;
+  responsibilities?: string;
+  title?: string;
+}
