# src/openapi/openapi.json
@@ -17,7 +17,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8088/api/v1",
+      "url": "http://localhost:8089/api/v1",
       "description": "Local ENV"
     },
     {
@@ -31,6 +31,58 @@
     }
   ],
   "paths": {
+    "/job-posts": {
+      "get": {
+        "tags": [
+          "JobPost"
+        ],
+        "operationId": "findAllJobPosts",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/JobPostResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "JobPost"
+        ],
+        "operationId": "saveJobPost",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/JobPostRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": [
@@ -91,6 +143,37 @@
         }
       }
     },
+    "/job-posts/{job-post-id}": {
+      "get": {
+        "tags": [
+          "JobPost"
+        ],
+        "operationId": "findJobPostById",
+        "parameters": [
+          {
+            "name": "job-post-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JobPostResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/activate-account": {
       "get": {
         "tags": [
@@ -117,6 +200,37 @@
   },
   "components": {
     "schemas": {
+      "JobPostRequest": {
+        "required": [
+          "description",
+          "requirementsANDskills",
+          "responsibilities",
+          "title"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "responsibilities": {
+            "type": "string"
+          },
+          "requirementsANDskills": {
+            "type": "string"
+          },
+          "dateLine": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
       "RegistrationRequest": {
         "required": [
           "email",
@@ -138,6 +252,9 @@
           "password": {
             "maxLength": 2147483647,
             "minLength": 8,
+            "type": "string"
+          },
+          "role": {
             "type": "string"
           }
         }
@@ -164,6 +281,34 @@
         "properties": {
           "token": {
             "type": "string"
+          },
+          "role": {
+            "type": "string"
+          }
+        }
+      },
+      "JobPostResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "responsibilities": {
+            "type": "string"
+          },
+          "requirementsANDskills": {
+            "type": "string"
+          },
+          "dateLine": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       }
